--- a/_config.yml
+++ b/_config.yml
@@ -64,12 +64,12 @@ timezone: Asia/Kolkata # Timezone for blog posts and alike
 # 5. Collections
 collections:
   posts:
-    title: Posts # Needed for Siteleaf
+    title: Prorgramming Tutorials # Needed for Siteleaf
     output: true
-    description: "My thoughts and ideas" # The post list page content
-    feature_text: |
-      Welcome to the blog
-    feature_image: "https://picsum.photos/2560/600?image=866"
+    description: "Learn NodeJS, JavaScript, Java, Express Js, Angular Js/ Angular 6/7/8, React Js" # The post list page content
+#    feature_text: |
+#      Welcome to the blog
+#    feature_image: "https://picsum.photos/2560/600?image=866"
 
 # 6. Jekyll collections settings
 defaults:
@@ -111,8 +111,6 @@ favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
 navigation_header:
 - title: Home
   url: /
-- title: Elements
-  url: /elements/
 - title: Blog
   url: /blog/
 - title: Topics
