--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,8 @@ navigation_header:
   url: /blog/
 - title: Topics
   url: /categories/
+- title: EMI Calculator
+  url: /emi-calculator/
 - title: Search
   url: /search/
 #- title: Fork Alembic
