--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,7 @@ social: # jekyll-seo-tag > social overrides
 sass:
   style: compressed # Style compression
 permalink: pretty  # Permalink style (/YYYY/MM/DD/page-name/)
+# permalink: none  # Permalink style (/YYYY/MM/DD/page-name/)
 excerpt_separator: <!-- more --> # Marks end of excerpt in posts
 timezone: Asia/Kolkata # Timezone for blog posts and alike
 
